@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Add shakeArgsPrune and shakeArgsPruneWith
     #228, allow running cmd async by collecting the ProcessHandle
     Make getShakeOptions/processorCount of 0 return the used value
     #212, document how to get a full terminal with cmd
